add vehicle feature
