# internal/handler/http/user/user.go
@@ -1,0 +1,365 @@
+package user
+
+import (
+	"errors"
+	"fmt"
+	"net/http"
+	"reflect"
+	"workshop-management/internal/dto"
+	"workshop-management/internal/services/user"
+	"workshop-management/pkg/logger"
+	"workshop-management/pkg/response"
+	"workshop-management/utils"
+
+	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+	"gorm.io/gorm"
+)
+
+type HandlerUser struct {
+	Service *user.ServiceUser
+}
+
+func NewUserHandler(s *user.ServiceUser) *HandlerUser {
+	return &HandlerUser{Service: s}
+}
+
+// Register godoc
+// @Summary Register a new user
+// @Description Register a new user
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param user body dto.UserRegister true "User registration details"
+// @Success 201 {object} response.Success
+// @Failure 400 {object} response.Error
+// @Failure 500 {object} response.Error
+// @Router /user/register [post]
+func (h *HandlerUser) Register(ctx *gin.Context) {
+	var req dto.UserRegister
+	logId := utils.GenerateLogId(ctx)
+	logPrefix := fmt.Sprintf("[%s][UserHandler][Register]", logId)
+
+	if err := ctx.BindJSON(&req); err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; BindJSON ERROR: %s;", logPrefix, err.Error()))
+
+		res := response.Response(http.StatusBadRequest, utils.InvalidRequest, logId, nil)
+		res.Error = utils.ValidateError(err, reflect.TypeOf(req), "json")
+		ctx.JSON(http.StatusBadRequest, res)
+		return
+	}
+	logger.WriteLog(logger.LogLevelDebug, fmt.Sprintf("%s; Request: %+v;", logPrefix, utils.JsonEncode(req)))
+
+	data, err := h.Service.RegisterUser(req)
+	if err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; Service.RegisterUser; Error: %+v", logPrefix, err))
+		if errors.Is(err, gorm.ErrDuplicatedKey) {
+			logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; Error: email or phone already exists", logPrefix))
+			res := response.Response(http.StatusBadRequest, utils.MsgExists, logId, nil)
+			res.Error = response.Errors{Code: http.StatusBadRequest, Message: "email or phone already exists"}
+			ctx.JSON(http.StatusBadRequest, res)
+			return
+		}
+
+		res := response.Response(http.StatusInternalServerError, utils.MsgFail, logId, nil)
+		res.Error = err.Error()
+		ctx.JSON(http.StatusInternalServerError, res)
+		return
+	}
+
+	res := response.Response(http.StatusCreated, "User registered successfully", logId, data)
+	logger.WriteLog(logger.LogLevelDebug, fmt.Sprintf("%s; Response: %+v;", logPrefix, utils.JsonEncode(data)))
+	ctx.JSON(http.StatusCreated, res)
+}
+
+// Login godoc
+// @Summary Login a user
+// @Description Login a user
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param user body dto.Login true "User login details"
+// @Success 200 {object} response.Success
+// @Failure 400 {object} response.Error
+// @Failure 500 {object} response.Error
+// @Router /user/login [post]
+func (h *HandlerUser) Login(ctx *gin.Context) {
+	var req dto.Login
+	logId := utils.GenerateLogId(ctx)
+	logPrefix := fmt.Sprintf("[%s][UserController][Login]", logId)
+
+	if err := ctx.BindJSON(&req); err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; BindJSON ERROR: %s;", logPrefix, err.Error()))
+
+		res := response.Response(http.StatusBadRequest, utils.InvalidRequest, logId, nil)
+		res.Error = utils.ValidateError(err, reflect.TypeOf(req), "json")
+		ctx.JSON(http.StatusBadRequest, res)
+		return
+	}
+	logger.WriteLog(logger.LogLevelDebug, fmt.Sprintf("%s; Request: %+v;", logPrefix, utils.JsonEncode(req)))
+
+	token, err := h.Service.LoginUser(req, logId.String())
+	if err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; Service.LoginUser; ERROR: %s;", logPrefix, err))
+		if errors.Is(err, gorm.ErrRecordNotFound) || err.Error() == utils.ErrHashPassword {
+			res := response.Response(http.StatusBadRequest, utils.InvalidCred, logId, nil)
+			res.Error = response.Errors{Code: http.StatusBadRequest, Message: utils.MsgCredential}
+			ctx.JSON(http.StatusBadRequest, res)
+			return
+		}
+
+		res := response.Response(http.StatusInternalServerError, utils.MsgFail, logId, nil)
+		res.Error = err.Error()
+		ctx.JSON(http.StatusInternalServerError, res)
+		return
+	}
+
+	res := response.Response(http.StatusOK, "success", logId, map[string]interface{}{"token": token})
+	logger.WriteLog(logger.LogLevelDebug, fmt.Sprintf("%s; Response: %+v;", logPrefix, utils.JsonEncode(token)))
+	ctx.JSON(http.StatusOK, res)
+}
+
+// Logout godoc
+// @Summary Logout a user
+// @Description Logout a user
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} response.Success
+// @Failure 500 {object} response.Error
+// @Security ApiKeyAuth
+// @Router /user/logout [post]
+func (h *HandlerUser) Logout(ctx *gin.Context) {
+	logId := utils.GenerateLogId(ctx)
+	logPrefix := fmt.Sprintf("[%s][UserController][Logout]", logId)
+
+	token, ok := ctx.Get("token")
+	if !ok {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; token not found in context", logPrefix))
+		res := response.Response(http.StatusInternalServerError, utils.MsgFail, logId, nil)
+		res.Error = "token not found"
+		ctx.JSON(http.StatusInternalServerError, res)
+		return
+	}
+
+	if err := h.Service.LogoutUser(token.(string)); err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; Service.LogoutUser; Error: %+v", logPrefix, err))
+		res := response.Response(http.StatusInternalServerError, utils.MsgFail, logId, nil)
+		res.Error = err.Error()
+		ctx.JSON(http.StatusInternalServerError, res)
+		return
+	}
+
+	res := response.Response(http.StatusOK, "User logged out successfully", logId, nil)
+	logger.WriteLog(logger.LogLevelDebug, fmt.Sprintf("%s; Success: User logged out successfully", logPrefix))
+	ctx.JSON(http.StatusOK, res)
+}
+
+// GetUserById godoc
+// @Summary Get a user by ID
+// @Description Get a user by ID
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param id path string true "User ID"
+// @Success 200 {object} response.Success
+// @Failure 404 {object} response.Error
+// @Failure 500 {object} response.Error
+// @Security ApiKeyAuth
+// @Router /user/{id} [get]
+func (h *HandlerUser) GetUserById(ctx *gin.Context) {
+	logId := utils.GenerateLogId(ctx)
+	logPrefix := fmt.Sprintf("[%s][UserHandler][GetUserByID]", logId)
+
+	id := ctx.Param("id")
+	if id == "" {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; Missing ID in path", logPrefix))
+		res := response.Response(http.StatusBadRequest, http.StatusText(http.StatusBadRequest), logId, nil)
+		res.Error = "ID parameter is required"
+		ctx.JSON(http.StatusBadRequest, res)
+		return
+	}
+	if _, err := uuid.Parse(id); err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; Invalid ID: '%s'", logPrefix, id))
+		res := response.Response(http.StatusBadRequest, http.StatusText(http.StatusBadRequest), logId, nil)
+		res.Error = response.Errors{Code: http.StatusBadRequest, Message: "ID must be a valid UUID"}
+		ctx.JSON(http.StatusBadRequest, res)
+		return
+	}
+
+	data, err := h.Service.GetUserById(id)
+	if err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; Service.GetUserByID; ERROR: %s;", logPrefix, err))
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			res := response.Response(http.StatusNotFound, utils.MsgNotFound, logId, nil)
+			res.Error = response.Errors{Code: http.StatusNotFound, Message: "user not found"}
+			ctx.JSON(http.StatusNotFound, res)
+			return
+		}
+
+		res := response.Response(http.StatusInternalServerError, utils.MsgFail, logId, nil)
+		res.Error = err.Error()
+		ctx.JSON(http.StatusInternalServerError, res)
+		return
+	}
+
+	res := response.Response(http.StatusOK, "success", logId, data)
+	logger.WriteLog(logger.LogLevelDebug, fmt.Sprintf("%s; Response: %+v;", logPrefix, utils.JsonEncode(data)))
+	ctx.JSON(http.StatusOK, res)
+}
+
+// GetUserByAuth godoc
+// @Summary Get a user by JWT token
+// @Description Get a user by JWT token
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} response.Success
+// @Failure 404 {object} response.Error
+// @Failure 500 {object} response.Error
+// @Security ApiKeyAuth
+// @Router /user [get]
+func (h *HandlerUser) GetUserByAuth(ctx *gin.Context) {
+	authData := utils.GetAuthData(ctx)
+	userId := utils.InterfaceString(authData["user_id"])
+	logId := utils.GenerateLogId(ctx)
+	logPrefix := fmt.Sprintf("[%s][UserHandler][GetUserByAuth]", logId)
+
+	data, err := h.Service.GetUserByAuth(userId)
+	if err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; Service.GetUserByAuth; ERROR: %s;", logPrefix, err))
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			res := response.Response(http.StatusNotFound, utils.MsgNotFound, logId, nil)
+			res.Error = response.Errors{Code: http.StatusNotFound, Message: "user not found"}
+			ctx.JSON(http.StatusNotFound, res)
+			return
+		}
+
+		res := response.Response(http.StatusInternalServerError, utils.MsgFail, logId, nil)
+		res.Error = err.Error()
+		ctx.JSON(http.StatusInternalServerError, res)
+		return
+	}
+
+	res := response.Response(http.StatusOK, "success", logId, data)
+	logger.WriteLog(logger.LogLevelDebug, fmt.Sprintf("%s; Response: %+v;", logPrefix, utils.JsonEncode(data)))
+	ctx.JSON(http.StatusOK, res)
+}
+
+// GetAllUsers godoc
+// @Summary Get all users
+// @Description Get all users
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} response.Success
+// @Failure 500 {object} response.Error
+// @Security ApiKeyAuth
+// @Router /users [get]
+func (h *HandlerUser) GetAllUsers(ctx *gin.Context) {
+	logId := utils.GenerateLogId(ctx)
+	logPrefix := fmt.Sprintf("[%s][UserHandler][GetAllUsers]", logId)
+
+	users, err := h.Service.GetAllUsers()
+	if err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; Service.GetAllUsers; ERROR: %s;", logPrefix, err))
+		res := response.Response(http.StatusInternalServerError, utils.MsgFail, logId, nil)
+		res.Error = err.Error()
+		ctx.JSON(http.StatusInternalServerError, res)
+		return
+	}
+
+	res := response.Response(http.StatusOK, "success", logId, users)
+	logger.WriteLog(logger.LogLevelDebug, fmt.Sprintf("%s; Response: %+v;", logPrefix, utils.JsonEncode(users)))
+	ctx.JSON(http.StatusOK, res)
+}
+
+// UpdateUser godoc
+// @Summary Update a user
+// @Description Update a user
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param id path string true "User ID"
+// @Param user body dto.UserUpdate true "User update details"
+// @Success 200 {object} response.Success
+// @Failure 400 {object} response.Error
+// @Failure 404 {object} response.Error
+// @Failure 500 {object} response.Error
+// @Security ApiKeyAuth
+// @Router /user [put]
+func (h *HandlerUser) UpdateUser(ctx *gin.Context) {
+	var req dto.UserUpdate
+	authData := utils.GetAuthData(ctx)
+	userId := utils.InterfaceString(authData["user_id"])
+	logId := utils.GenerateLogId(ctx)
+	logPrefix := fmt.Sprintf("[%s][UserHandler][UpdateUser]", logId)
+
+	if err := ctx.BindJSON(&req); err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; BindJSON ERROR: %s;", logPrefix, err.Error()))
+
+		res := response.Response(http.StatusBadRequest, utils.InvalidRequest, logId, nil)
+		res.Error = utils.ValidateError(err, reflect.TypeOf(req), "json")
+		ctx.JSON(http.StatusBadRequest, res)
+		return
+	}
+
+	data, err := h.Service.UpdateUser(userId, req)
+	if err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; Service.UpdateUser; ERROR: %s;", logPrefix, err))
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			res := response.Response(http.StatusNotFound, utils.MsgNotFound, logId, nil)
+			res.Error = response.Errors{Code: http.StatusNotFound, Message: "user not found"}
+			ctx.JSON(http.StatusNotFound, res)
+			return
+		}
+
+		res := response.Response(http.StatusBadRequest, utils.MsgFail, logId, nil)
+		res.Error = err.Error()
+		ctx.JSON(http.StatusBadRequest, res)
+		return
+	}
+
+	res := response.Response(http.StatusOK, "User updated successfully", logId, data)
+	logger.WriteLog(logger.LogLevelDebug, fmt.Sprintf("%s; Response: %+v;", logPrefix, utils.JsonEncode(data)))
+	ctx.JSON(http.StatusOK, res)
+}
+
+// DeleteUser godoc
+// @Summary Delete a user
+// @Description Delete a user
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param id path string true "User ID"
+// @Success 200 {object} response.Success
+// @Failure 404 {object} response.Error
+// @Failure 500 {object} response.Error
+// @Security ApiKeyAuth
+// @Router /user/{id} [delete]
+func (h *HandlerUser) DeleteUser(ctx *gin.Context) {
+	logId := utils.GenerateLogId(ctx)
+	logPrefix := fmt.Sprintf("[%s][UserHandler][DeleteUser]", logId)
+
+	id := ctx.Param("id")
+
+	err := h.Service.DeleteUser(id)
+	if err != nil {
+		logger.WriteLog(logger.LogLevelError, fmt.Sprintf("%s; Service.DeleteUser; ERROR: %s;", logPrefix, err))
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			res := response.Response(http.StatusNotFound, utils.MsgNotFound, logId, nil)
+			res.Error = response.Errors{Code: http.StatusNotFound, Message: "user not found"}
+			ctx.JSON(http.StatusNotFound, res)
+			return
+		}
+
+		res := response.Response(http.StatusInternalServerError, utils.MsgFail, logId, nil)
+		res.Error = err.Error()
+		ctx.JSON(http.StatusInternalServerError, res)
+		return
+	}
+
+	res := response.Response(http.StatusOK, "User deleted successfully", logId, nil)
+	logger.WriteLog(logger.LogLevelDebug, fmt.Sprintf("%s; Success: User deleted successfully", logPrefix))
+	ctx.JSON(http.StatusOK, res)
+}
