# internal/handler/router.go
@@ -1,0 +1,90 @@
+package handler
+
+import (
+	"net/http"
+	userHandler "workshop-management/internal/handler/http/user"
+	vehicleHandler "workshop-management/internal/handler/http/vehicle"
+	authRepo "workshop-management/internal/repository/auth"
+	userRepo "workshop-management/internal/repository/user"
+	vehicleRepo "workshop-management/internal/repository/vehicle"
+	userSvc "workshop-management/internal/services/user"
+	vehicleSvc "workshop-management/internal/services/vehicle"
+	"workshop-management/middleware"
+	"workshop-management/pkg/logger"
+	"workshop-management/utils"
+
+	"github.com/gin-gonic/gin"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
+	"gorm.io/gorm"
+)
+
+type Routes struct {
+	App *gin.Engine
+	DB  *gorm.DB
+}
+
+func NewRoutes() *Routes {
+	app := gin.Default()
+
+	app.Use(middleware.CORS())
+	app.Use(gin.CustomRecovery(middleware.ErrorHandler))
+	app.Use(middleware.SetContextId())
+
+	// health check
+	app.GET("/healthcheck", func(ctx *gin.Context) {
+		logger.WriteLog(logger.LogLevelDebug, "ClientIP: "+ctx.ClientIP())
+		ctx.JSON(http.StatusOK, gin.H{
+			"message": "OK!!",
+		})
+	})
+	app.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	return &Routes{
+		App: app,
+	}
+}
+
+func (r *Routes) UserRoutes() {
+	blacklistRepo := authRepo.NewBlacklistRepo(r.DB)
+	repo := userRepo.NewUserRepo(r.DB)
+	uc := userSvc.NewUserService(repo, blacklistRepo)
+	h := userHandler.NewUserHandler(uc)
+	mdw := middleware.NewMiddleware(blacklistRepo)
+
+	user := r.App.Group("/api/user")
+	{
+		user.POST("/register", h.Register)
+		user.POST("/login", h.Login)
+
+		userPriv := user.Group("").Use(mdw.AuthMiddleware())
+		{
+			userPriv.POST("/logout", h.Logout)
+			userPriv.GET("", h.GetUserByAuth)
+			userPriv.GET("/:id", mdw.RoleMiddleware(utils.RoleAdmin, utils.RoleCashier), h.GetUserById)
+			userPriv.PUT("", h.UpdateUser)
+			userPriv.DELETE("/:id", h.DeleteUser)
+		}
+	}
+
+	r.App.GET("/api/users", mdw.AuthMiddleware(), mdw.RoleMiddleware(utils.RoleAdmin, utils.RoleCashier), h.GetAllUsers)
+}
+
+func (r *Routes) VehicleRoutes() {
+	repo := vehicleRepo.NewVehicleRepo(r.DB)
+	uc := vehicleSvc.NewVehicleService(repo)
+	h := vehicleHandler.NewVehicleHandler(uc)
+
+	blacklistRepo := authRepo.NewBlacklistRepo(r.DB)
+	mdw := middleware.NewMiddleware(blacklistRepo)
+
+	vehicle := r.App.Group("/api/vehicle").Use(mdw.AuthMiddleware())
+	{
+		vehicle.POST("", h.CreateVehicle)
+		vehicle.GET("/:id", h.GetVehicle)
+		vehicle.GET("/list", h.FetchVehicles)
+		//vehicle.PUT("/:id", mdw.RoleMiddleware(utils.RoleAdmin, utils.RoleCustomer), h.UpdateVehicle)
+		//vehicle.DELETE("/:id", h.DeleteVehicle)
+	}
+
+}
